--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
       <a href="#edu"><div id="edume">Education</div></a>
       <a href="#ach"><div id="achme">Projects</div></a>
     </nav>
-    <div><br /><br /><br /><br /></div>
+    <div><br /></div>
     <div id="welcome">
       <img class="full" src="images/booksbg.png" />
     </div>
     <h1>About Me</h1>
+    <br><br><br>
     <div id="about" class="sects">
       <div class="sects">
-        <img src="images/selfphoto.jpeg" class="round" />
         <p>
           My name is Christopher Samuel. I'm a rising junior at Friends' Central
           in Pennsylvania. I'm interested in technology, programming, biology,
           and biomedical engineering. I'm 15 years old.
         </p>
+        <img src="images/selfphoto.jpeg" class="round" height="300px"/>
       </div>
       <div class="sects">
-        <img src="images/bbg.png" class="little" width="125px" height="219px" />
+        <img src="images/bbg.png" class="little" width="60px" height="100px" />
         <div id="text_into_list">
           <div id="ffshark">
           <div id="longer">
             <p>Fun Facts!</p>
           </div>
           <div>
-            <img src="images/shark.png" class="little" width="250px" />
+            <img src="images/shark.png" class="little" width="150px" />
           </div>
         </div>
           <ul>
@@ -43,7 +44,7 @@
             <li>I like lemonade</li>
             <li>My favorite color is green</li>
             <br>
-            <img src="images/lemonade.webp" class="little" width="250px" />
+            <img src="images/lemonade.webp" class="little" width="100px" />
           </ul>
         </div>
       </div>
@@ -53,7 +54,7 @@
         <h2>Education</h2>
       </div>
       <div class="sects">
-        <img class="round" src="images/school.webp" width="650px" />
+        <img class="round" src="images/school.webp" width="500px" />
         <div id="text_into_list">
           <p>Interesting Classes</p>
           <ul>
@@ -73,11 +74,12 @@
       <div id="h2head">
         <h2>Projects</h2>
         <p>Click on the images to see more</p>
+        <br><br><br>
       </div>
       <div id="ach_div">
         <div class="achs">
           <a href="https://replit.com/@ChrisSamuel/TBD" target="_blank">
-            <img class="round" src="images/td.png" width="600px" />
+            <img class="round" src="images/td.png" width="200px" />
           </a>
           <h3>Tower Defense</h3>
           <p>This is a basic tower defense game I'm working on.</p>
@@ -90,7 +92,7 @@
           <a
             href="https://replit.com/@ChristopherSam8/The-Old-Man-and-the-Sea"
             target="_blank"
-            ><img class="round" src="images/marlin.webp" width="600px"
+            ><img class="round" src="images/marlin.webp" width="200px"
           /></a>
           <h3>The Old Man and the Sea</h3>
           <p>This is a text-based fishing game I made in Python.</p>
@@ -103,7 +105,7 @@
           <a
             href="https://replit.com/@ChristopherSam8/Safari-A-Text-Adventure"
             target="_blank"
-            ><img class="round" src="images/safari.jpg" width="600px"
+            ><img class="round" src="images/safari.jpg" width="200px"
           /></a>
           <h3>Text Adventure</h3>
           <p>This is a text-based adventure game I made in Python.</p>
